kubernetes/development/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: amitapp
  namespace: amit-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: amitmyapp
  template:
    metadata:
      name: amitapppod
      namespace: amit-dev
      labels:
        app: amitmyapp
    spec:
      containers:
        - name: amitapppod
          image: amitkumarjo1994/myworkflowappqsimage-31b9867dbb2b29ce6ab8cd25e2daabd88d8fc05b
      imagePullSecrets:
        - name: secretregistry

---
apiVersion: v1
kind: Service
metadata:
  name: amitapppod-service
  namespace: amit-dev
spec:
  type: NodePort
  selector:
    app: myapp
  ports:
    - port: 80
      targetPort: 5000
      nodePort: 30007

---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    openshift.io/host.generated: "true"
  name: amitapppod-service
  namespace: amit-dev
spec:
  host: amitapppod-service-amit-dev.apps.opc-sonf-ogn.orange-guinee.com
  tls:
    termination: edge
  to:
    kind: Service
    name: amitapppod-service
    weight: 100
  wildcardPolicy: None
